Bimba Dev/src/objects/Defect__c.object
<CustomObject>
    <description>TOOLKIT - This object represents a failure to meet a requirement.</description>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_Defect__c</fullName>
        <label>Cause of Defect</label>
        <picklist>
            <picklistValues>
                <fullName>Access Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployment Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLS Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete Unit Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inconsistency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect/Invalid Input</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Clarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misunderstood Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Naming Convention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Testable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Verfiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oversight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redundant Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirements Missed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reusability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component_Detail__c</fullName>
        <label>Component Detail</label>
        <picklist>
            <picklistValues>
                <fullName>Custom Buttons or Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Functionality / Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Page Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security / Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow &amp; Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report / Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Detected__c</fullName>
        <label>Defect Detected</label>
        <picklist>
            <picklistValues>
                <fullName>Requirement Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Go-Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Script Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <label>Defect Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Review Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Script Review Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <label>Developer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retest_Status__c</fullName>
        <label>Retest Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retesting_Comments__c</fullName>
        <label>Retesting Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Business Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - System Outage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved By Business - Ready to Assign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix in Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can Not Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Salesforce.com Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Enhancement Consideration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Team QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Type__c</fullName>
        <label>Testing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Integration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regression Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Component__c</columns>
        <columns>Component_Detail__c</columns>
        <columns>Testing_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Environment__c</columns>
        <columns>Reported_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>